[gd_scene load_steps=4 format=3 uid="uid://6wiscqb1iy8e"]

[ext_resource type="Script" uid="uid://t8ag1jph3h0r" path="res://scripts/RunManager.gd" id="1_wuehs"]
[ext_resource type="Shader" uid="uid://dp2okkth76y5h" path="res://shaders/Main.gdshader" id="2_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg"]
shader = ExtResource("2_shader")
shader_parameter/color1 = Color(0.15, 0.05, 0.2, 0.8)
shader_parameter/color2 = Color(0.05, 0.15, 0.3, 0.8)
shader_parameter/color3 = Color(0.1, 0.1, 0.25, 0.8)
shader_parameter/speed = 0.15
shader_parameter/scale = 4.0
shader_parameter/distortion = 0.4
shader_parameter/glow_intensity = 0.25

[node name="RunManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wuehs")

[node name="UILayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="UILayer"]
material = SubResource("ShaderMaterial_bg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.1, 0.15, 1)

[node name="VignetteOverlay" type="ColorRect" parent="UILayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.3)

[node name="CenterContainer" type="CenterContainer" parent="UILayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentPanel" type="PanelContainer" parent="UILayer/CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2

[node name="PanelBG" type="ColorRect" parent="UILayer/CenterContainer/ContentPanel"]
layout_mode = 2
color = Color(0.14901961, 0.14901961, 0.2509804, 0.9019608)

[node name="MarginContainer" type="MarginContainer" parent="UILayer/CenterContainer/ContentPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/CenterContainer/ContentPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="TransitionLabel" type="Label" parent="UILayer/CenterContainer/ContentPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 38
text = "Preparing Your Run..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Spacer1" type="Control" parent="UILayer/CenterContainer/ContentPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="UILayer/CenterContainer/ContentPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 22
text = "Generating starter deck..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="UILayer/CenterContainer/ContentPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ProgressContainer" type="VBoxContainer" parent="UILayer/CenterContainer/ContentPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ProgressBar" type="ProgressBar" parent="UILayer/CenterContainer/ContentPanel/MarginContainer/VBoxContainer/ProgressContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
show_percentage = false

[node name="ProgressLabel" type="Label" parent="UILayer/CenterContainer/ContentPanel/MarginContainer/VBoxContainer/ProgressContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "0%"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="UILayer/CenterContainer/ContentPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="EnemyInfoContainer" type="VBoxContainer" parent="UILayer/CenterContainer/ContentPanel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="EnemyTypeLabel" type="Label" parent="UILayer/CenterContainer/ContentPanel/MarginContainer/VBoxContainer/EnemyInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "BOSS BATTLE"
horizontal_alignment = 1

[node name="EnemyNameLabel" type="Label" parent="UILayer/CenterContainer/ContentPanel/MarginContainer/VBoxContainer/EnemyInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 28
text = "Time Warden"
horizontal_alignment = 1

[node name="EnemyEffectLabel" type="Label" parent="UILayer/CenterContainer/ContentPanel/MarginContainer/VBoxContainer/EnemyInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Time Limit: 90 seconds"
horizontal_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
